# meta-pinn

./: .gitignore  .pre-commit-config.yaml  COMPLETE_FIGURES_SUMMARY.md  MANIFEST.in  POWERPOINT_PRESENTATION_COMPLETE.md  PRESENTATION_FIGURES_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START_COMMANDS.md  README.md  concepts.md  config.py  create_powerpoint_final.py  generate_complete_powerpoint.py  generate_conceptual_figures.py  generate_powerpoint_presentation.py  generate_presentation_figures.py  install_fenicsx.sh  instructions.md  main.py  pyproject.toml  pytest.ini  requirements.txt  results.md  run_complete_pipeline.sh  run_training_pipeline.bat  run_training_pipeline.sh  setup.py
backend/: app.py  config.py  imgen.py  interactive.py  main.py  requirements.txt
backend/results/: 3d_visualization_data.json  simulation_data.json  trained_model.pth
conceptual_figures/: README.md
configs/: data_default.yaml  experiment_default.yaml  model_default.yaml  training_default.yaml
docs/: Makefile  api_reference.rst  conf.py  contributing.rst  doctest_examples.py  examples.rst  getting_started.rst  index.rst  requirements.txt  theory.rst  tutorials.rst  user_guide.rst
docs/_static/: custom.css
examples/: bayesian_uncertainty_demo.py  comprehensive_report_demo.py  enhanced_integrated_physics_discovery_demo.py  fenicsx_integration_demo.py  integrated_physics_discovery_demo.py  large_scale_dataset_demo.py  performance_benchmarking_demo.py  publication_demo.py  theoretical_analysis_demo.py
experiments/: __init__.py  config.py  runner.py
experiments/benchmarks/: __init__.py
experiments/meta_learning/: __init__.py
frontend/: package-lock.json  package.json
ml_research_pipeline/: __init__.py
ml_research_pipeline/bayesian/: __init__.py  bayesian_meta_pinn.py  uncertainty_calibrator.py
ml_research_pipeline/config/: __init__.py  base_config.py  data_config.py  experiment_config.py  model_config.py  training_config.py
ml_research_pipeline/core/: __init__.py  analytical_solutions.py  checkpoint_manager.py  dataset_manager.py  distributed_meta_pinn.py  fenicsx_solver.py  meta_pinn.py  standard_pinn.py  task_generator.py  training_monitor.py  transfer_learning_pinn.py
ml_research_pipeline/evaluation/: __init__.py  advanced_validation_framework.py  benchmark_suite.py  cross_validation.py  method_comparison.py  metrics.py  performance_profiler.py  performance_regression.py  physics_consistency.py  statistical_validator.py  uncertainty_quantifier.py
ml_research_pipeline/meta_learning/: __init__.py  adaptive_constraint_integration.py  meta_learning_optimizer.py  physics_informed_meta_learner.py  physics_regularizer.py
ml_research_pipeline/neural_operators/: __init__.py  deeponet.py  fourier_neural_operator.py  operator_meta_pinn.py
ml_research_pipeline/optimization/: __init__.py  bayesian_optimizer.py  hyperparameter_framework.py
ml_research_pipeline/papers/: __init__.py  plot_generator.py  report_generator.py  table_generator.py
ml_research_pipeline/physics_discovery/: __init__.py  advanced_causal_discovery.py  causal_discovery.py  discovery_ensemble.py  enhanced_mutual_info.py  ensemble_physics_discovery.py  expression_validation.py  fci_algorithm.py  improved_physics_discovery_pipeline.py  integrated_discovery.py  multi_objective_gp.py  neural_symbolic_regression.py  pc_algorithm.py  robust_symbolic_regression.py  symbolic_regression.py
ml_research_pipeline/preprocessing/: __init__.py  advanced_preprocessor.py  data_validation.py  data_validation.py.backup  feature_engineering.py  noise_reduction.py
ml_research_pipeline/utils/: __init__.py  cache_manager.py  distributed_utils.py  error_handler.py  experiment_manager.py  experiment_tracker.py  experiment_versioning.py  fallback_strategy_manager.py  io_utils.py  logging_utils.py  parallel_executor.py  random_utils.py  reproducibility_config.py  reproducibility_validator.py  result_management.py
papers/: __init__.py
presentation_figures/: README.md
presentation_visuals/: visualization_report.md
results/: trained_model.pth
src/: generate_data.py
tests/: __init__.py  test_analytical_solutions.py  test_bayesian_meta_pinn.py  test_benchmark_suite.py  test_causal_discovery.py  test_checkpoint_manager.py  test_convergence_analysis.py  test_dataset_manager.py  test_dataset_performance.py  test_deeponet.py  test_distributed_training.py  test_end_to_end_pipeline.py  test_enhanced_reproducibility_integration.py  test_evaluation_integration.py  test_evaluation_metrics.py  test_experiment_manager.py  test_experiment_tracker.py  test_experiment_versioning.py  test_fenicsx_integration.py  test_fenicsx_solver.py  test_fourier_neural_operator.py  test_integrated_discovery.py  test_latex_table_generator.py  test_maml_adaptation.py  test_mathematical_proofs.py  test_meta_learning_update.py  test_meta_pinn.py  test_method_comparison.py  test_operator_meta_pinn_integration.py  test_paper_plot_generator.py  test_performance_integration.py  test_performance_profiler.py  test_performance_regression.py  test_physics_loss.py  test_physics_validation.py  test_report_generation_integration.py  test_report_generator.py  test_reproducibility_config.py  test_reproducibility_integration.py  test_reproducibility_validation.py  (+11 more)
theory/: __init__.py  convergence_analysis.py  sample_complexity.py
(+79 files in other folders)
